# ai-dev-marketplace

./: .gitignore  AUTOMATED-PLANNING-DESIGN.md  AYRSHARE-INTEGRATION-SUMMARY.md  CLAUDE.md  ML-TRAINING-AND-INFERENCE.md  README.md  REFACTOR-NEEDED.md  SETTINGS-SYNC-GUIDE.md  ayrshare-documentation.md  fastmcp-documentation.md  requirements-dev.txt
.archive/: WORKFLOW-EXAMPLE.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  marketplace.json.backup
ayrshare-mcp/: COMPONENTS.md  Dockerfile  PROJECT_SUMMARY.md  README.md  fly.toml  pyproject.toml  railway.json  test_mcp_usage.py
cats-mcp-server/: .env.example  DEPLOYMENT.md  server.py
docs/: AI-TECH-STACK-ARCHITECTURE.md  AUDIT_SUMMARY.md  DOPPLER-INTEGRATION.md  EXECUTION-ANALYSIS-RED-AI.md  FASTAPI-VERCEL-AI-MEM0-STACK.md  GLOBAL-COMMANDS-STRATEGY.md  MOBILE-TECHNOLOGY-RESEARCH.md  NEXT-JS-PLUGIN-DEVELOPMENT-GUIDE.md  PLUGIN_CREATE_COMPLETE_WORKFLOW.md  PLUGIN_CREATE_FIX.md  README.md  README_AUDIT.md
marketing-automation/: claude_desktop_config.example.json  fastmcp.json  requirements.txt  server.py
mcp-servers/: README.md
scripts/: README.md  add-architecture-docs.py  add-architecture-docs.sh  add-skill-instructions.sh  add-skill-tool.sh  fix-marketplace-sync.sh  fix-skill-newlines.sh  generate-mcp-instructions.sh  generate-mcp-permissions.sh  marketplace-validator.py  (+5 more)
tailwind-ui-mcp/: .env.example  PROJECT_SUMMARY.md  README_PYTHON.md  TOOLS.md  claude_desktop_config.example.json  pyproject.toml  verify_setup.sh
tailwind-ui-mcp/tests/: conftest.py  test_input_validation.py
(+2024 files in other folders)
